--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -14,6 +14,13 @@ if (i<j) {
 dosomething();
 }
 ```
+or what about this?
+
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
 
 what about this other test right here?
 
