testing code highlighting

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -1,5 +1,5 @@
 ---
-layout: postc
+layout: post
 title:  "Testing Code Highlighting"
 date:   2015-07-17 23:34:28
 categories: Test
@@ -9,11 +9,12 @@ categories: Test
 
 I'm trying to figure out code highlighting with Jekyll and pygment.
 
-```
+{% highight c %}
 if (i<j) {
 dosomething();
 }
-```
+{% endhighlight %}
+
 or what about this?
 
 {% highlight ruby %}
