--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -9,13 +9,15 @@ categories: Test
 
 I'm trying to figure out code highlighting with Jekyll and pygment.
 
+Does this work?
+
 {% highight c %}
 if (i<j) {
 dosomething();
 }
 {% endhighlight %}
 
-or what about this?
+Or what about this?
 
 {% highlight ruby %}
 def foo
