testing code highlighting

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -11,7 +11,7 @@ I'm trying to figure out code highlighting with Jekyll and pygment.
 
 Does this work?
 
-{% highight c %}
+{% highlight c %}
 if (i<j) {
 dosomething();
 }
