more code highlighting

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -25,7 +25,7 @@ def foo
 end
 {% endhighlight %}
 
-what about this other test right here?
+what about this other little test right here?
 
 ```
 var num = 0;
