testing code highlighting

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -27,7 +27,8 @@ end
 
 what about this other little test right here?
 
-```
+{% highlight javascript %}
+
 var num = 0;
 
 process.argv.forEach(function(val, index, array) {
@@ -37,4 +38,5 @@ process.argv.forEach(function(val, index, array) {
 } );
 
 console.log(num);
-```
+
+{% endhighlight %}
