--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -40,3 +40,15 @@ process.argv.forEach(function(val, index, array) {
 console.log(num);
 
 {% endhighlight %}
+
+```
+var num = 0;
+
+process.argv.forEach(function(val, index, array) {
+	if (index >= 2) {
+            num += + val;
+        }
+} );
+
+console.log(num);
+```
