testing code highlighting

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -7,6 +7,9 @@ categories: Test
 
 #This is a test.
 
+Number: 15
+
+
 I'm trying to figure out code highlighting with Jekyll and pygment.
 
 Does this work?
@@ -40,6 +43,8 @@ process.argv.forEach(function(val, index, array) {
 console.log(num);
 
 {% endhighlight %}
+
+Then why not this???
 
 ```
 var num = 0;
