--- a/_posts/2015-07-15-hadoop.md
+++ b/_posts/2015-07-15-hadoop.md
@@ -1,28 +1,30 @@
 ---
 layout: post
-title:  "Effiicently extracting XML Data from HDFS sequence files"
+title:  "Efficiently extracting XML Data from HDFS sequence files"
+author: "Beat Schwegler"
+#author-link: "http://#"
+#author-image: "/images/authors/photo.jpg" 
 date:   2015-07-15 23:34:28
 categories: XML HDFS Hadoop HDInsight Big_Data IoT XML
+color: "green"
+#image: "/images/imagename.png" #should be ~350px tall
+excerpt: Learn how to implement a MapReduce job to efficiently extract XML data from HDFS sequence files using a custom RecordReader.
 ---
 
-# Efficiently extracting XML data from HDFS sequence files
 
-Beat Schwegler, Partner Catalyst Team
-
-
-Customer Problem
+### Customer Problem
 
 A partner we work with collects large quantities of diagnostic data from a wide range of devices. Periodically, each device transmits its state as an XML file. These XML files are archived on a Hadoop cluster as compressed sequence files. The goal of the project was to efficiently extract specific attributes and elements from the archive and use them for further processing, such as predictive analytics using Microsoft Azure Machine Learning. Less than 0.001% of the device data needs to be extracted from these models, making it impractical and inefficient to parse each document using XML DOM or SAX.
 
 In this paper, you will learn how to implement a MapReduce job to efficiently extract XML data from HDFS sequence files using a custom RecordReader.
 
-Overview of the Solution
+### Overview of the Solution
 
 To avoid the performance penalty of loading and parsing the complete XML document, we created a custom record reader that implements a scanner to search the raw byte stream for specific XML nodes to extract. These extracted nodes provide the input data for the map job, which then loads the XML fragment into a DOM and runs XPath expressions against it. This allows for an efficient extraction while still providing the use of XPath (the de facto standard) to select the nodes of interest.
 
 An illustrative example is a data scientist who wants to analyze the performance of a particular control unit (e.g. the thermostat) across the last 4 years. The data scientist would define an extraction rule for all thermostats and run the job against the last 4 years of sequence files. The output of this job contains all the thermostat data including additional metadata such as timestamps, location or device identification.
 
-Implementation
+### Implementation
 
 The full source code of this solution can be found on GitHub: [_https://github.com/cloudbeatsch/HadoopXmlExtractor_](https://github.com/cloudbeatsch/HadoopXmlExtractor)
 
@@ -160,12 +162,12 @@ The extraction configuration file configures the scanner, provides the XPath exp
 
 The complete description of the configuration format can be found [_here_](https://github.com/cloudbeatsch/HadoopXmlExtractor/blob/master/README.md), together with two [_example configurations_](https://github.com/cloudbeatsch/HadoopXmlExtractor/tree/master/testdata).
 
-Challenges
+### Challenges
 
 The scanner (implemented by `SeqXmlRecordReader`) does not parse the XML document but only looks for string matches: It scans the document for the occurrence of the tag name (including the start bracket). The same applies for attribute values: It simply searches within the start tag for the occurrence of the specified string.
 
 To ensure configuration simplicity, the current version loads each extracted byte stream (the Mapper input) into a DOM and runs an XPath expressions against it. While this allows users to use XPath as a familiar tool to define the extraction, it also leads to a performance penalty. Depending on the size of the extracted byte stream, the complexity of the DOM or the XPath expression, it is possible to replace this Mapper implementation with one that uses a different extraction rule (e.g. Regular expressions or a SAX based extraction).
 
-Opportunities for Reuse
+### Opportunities for Reuse
 
 This XML extraction can be used for any project that requires efficient data extraction from XML files stored in HDFS –without the need for loading the complete files into a DOM. For performance reasons, the current version works with XML files that are compressed as Hadoop sequence files. The `SeqXmlRecordReader` requires a unique key for each contained file. (`CreateSequenceFile` is a sample application in the repo that creates a sequence from files contained in folder). It is also be possible to change `SeqXmlRecordReader` to work with non-compressed XML files.
