testing markdown options

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -1,18 +1,17 @@
 ---
 layout: post
-title:  "Testing Code Highlighting"
+title:  "Testing Markdown Layout"
 date:   2015-07-17 23:34:28
 categories: Test
 ---
 
-#This is a test.
+# This is a test.
 
 Number: 17
 
+Test post for trying out different Markdown layout options.
 
-I'm trying to figure out code highlighting with Jekyll and pygment.
-
-Does this work?
+Here's simple c code using 3 backticks:
 
 ```
 if (i<j) {
@@ -20,7 +19,7 @@ dosomething();
 }
 ```
 
-Or what about this?
+And here's some Ruby code, also with 3 backticks:
 
 ```
 def foo
@@ -28,7 +27,7 @@ def foo
 end
 ```
 
-what about this other little test right here?
+And some javascript, also with 3 backticks
 
 ```
 
@@ -44,9 +43,19 @@ console.log(num);
 
 ```
 
-Then why not this???
+And how about a table?
 
-```
+|---|---|
+|header 1|header 2|
+----
+|item 1|item 2|
+|item 3|item 4|
+-----
+
+Sometimes, tildes work for code isntead of backticks - like this:
+
+~~~
+
 var num = 0;
 
 process.argv.forEach(function(val, index, array) {
@@ -56,4 +65,5 @@ process.argv.forEach(function(val, index, array) {
 } );
 
 console.log(num);
-```
+
+~~~
