playing with markdown

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -58,6 +58,11 @@ And how about a table?
 |item 3|item 4|
 -----
 
+First Header  | Second Header
+------------- | -------------
+Content Cell  | Content Cell
+Content Cell  | Content Cell
+
 Sometimes, tildes work for code isntead of backticks - like this:
 
 ~~~
