--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -51,11 +51,11 @@ console.log(num);
 
 And how about a table?
 
-|---|---|
-|header 1|header 2|
+| --- | --- |
+| header 1 | header 2 |
 ----
-|item 1|item 2|
-|item 3|item 4|
+| item 1 | item 2 |
+| item 3 | item 4 |
 -----
 
 First Header  | Second Header
@@ -63,7 +63,7 @@ First Header  | Second Header
 Content Cell  | Content Cell
 Content Cell  | Content Cell
 
-Sometimes, tildes work for code isntead of backticks - like this:
+Sometimes, tildes work for code instead of backticks - like this:
 
 ~~~
 
