Fix incorrect image links

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -3,11 +3,11 @@ layout: post
 title:  "Testing Markdown Layout"
 author: "Sara Spalding"
 #author-link: "http://#"
-#author-image: "/images/authors/photo.jpg"
+#author-image: "images/authors/photo.jpg"
 date:   2015-07-17 23:34:28
 categories: Test
 color: "orange"
-#image: "/images/imagename.png" #should be ~350px tall
+#image: "images/imagename.png" #should be ~350px tall
 excerpt: This is just a test article where I am trying out different things like code highlighting with Jeykll and pygment
 ---
 
