Fix incorrect image links, #2

--- a/_posts/2015-07-15-hadoop.md
+++ b/_posts/2015-07-15-hadoop.md
@@ -3,11 +3,11 @@ layout: post
 title:  "Efficiently extracting XML Data from HDFS sequence files"
 author: "Beat Schwegler"
 #author-link: "http://#"
-#author-image: "images/authors/photo.jpg" 
+#author-image: "/{{ site.baseurl }}/images/authors/photo.jpg" 
 date:   2015-07-15 23:34:28
 categories: XML HDFS Hadoop HDInsight Big_Data IoT XML
 color: "green"
-#image: "images/imagename.png" #should be ~350px tall
+#image: "/{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: Learn how to implement a MapReduce job to efficiently extract XML data from HDFS sequence files using a custom RecordReader.
 ---
 
