Fix all case studies
For the first time, we finally have a non-broken build.

@SaraSp @joshholmes: I’d recommend that going forward, we only accept
case studies that do not break the build and pass html-proofer.
Html-proofer checks if all images and links are reachable.

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Testing Markdown Layout"
 author: "Sara Spalding"
-#author-link: "http://#"
+author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date:   2015-07-17 23:34:28
 categories: Test
