Use Correct Headings in Posts

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -11,7 +11,7 @@ color: "orange"
 excerpt: This is just a test article where I am trying out different things like code highlighting with Jeykll and pygment
 ---
 
-# This is a test.
+## This is a test.
 
 Number: 17
 
