switched to blue for test case studies

--- a/_posts/2015-07-17-testing.md
+++ b/_posts/2015-07-17-testing.md
@@ -6,7 +6,7 @@ author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date:   2015-07-17 23:34:28
 categories: Test
-color: "orange"
+color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: This is just a test article where I am trying out different things like code highlighting with Jeykll and pygment
 ---
